# bro

./: .gitignore  README.md  bro.py  conversation.py  noxfile.py  pyproject.toml  source_ssh.sh
.github/workflows/: test.yml
demo_prompts/accounting/: prompt.txt
demo_prompts/check_current_time/: prompt.txt
demo_prompts/check_python_version/: prompt.txt
demo_prompts/find_manufacturer/: prompt.txt
demo_prompts/login_to_github/: prompt.txt
demo_prompts/login_to_wise/: prompt.txt
demo_prompts/message_slack/: prompt.txt
demo_prompts/python/: prompt.txt
demo_prompts/read_file/: prompt.txt
demo_prompts/read_url/: prompt.txt
src/bro/: __init__.py  __main__.py  brofiles.py  cli.py  conversation.py  executive.py  logs.py  memory.py  openmemory.py  reasoner.py  slack_interaction.py  ui_io.py  util.py  web_ui.py
src/bro/connector/: __init__.py  slack.py
src/bro/conversation/: __init__.py  conversation.py
src/bro/executive/: __init__.py  hierarchical.py  openai_cua.py  ui_tars_7b.py
src/bro/messaging/: __init__.py  slack.py
src/bro/reasoner/: __init__.py  openai_generic.py
src/bro/reflection/: __init__.py
