[build-system]
requires = ["setuptools~=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "zubax-bro"
authors = [
    {name = "Pavel Kirienko", email = "pavel.kirienko@zubax.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "openai~=1.101",
    "PyAutoGUI~=0.9",
    "pynput~=1.8",
    "mss~=10.1",
    "Pillow~=11.1",
    "tenacity~=9.1",
    "colorlog~=6.9",
    "nicegui~=2.23",
    "openmemory-py~=1.2.3",
    "slack-sdk~=3.39.0",
]

[project.scripts]
bro = "bro.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "bro.__version__" }

# --------------------------------------------------  BLACK  --------------------------------------------------
[tool.black]
line-length = 120
target-version = ['py313']
include = '''
(src/bro/.+\.py$)
|
(noxfile\.py$)
'''

# --------------------------------------------------  MYPY  --------------------------------------------------
[tool.mypy]
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_context = true
mypy_path = []

[[tool.mypy.overrides]]
module = ["pyautogui", "pynput.*", "slack_sdk.*", "requests", "yaml", "openmemory"]
ignore_missing_imports = true
